--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "jsonpath": "1.0.0",
     "knex": "0.12.9",
     "knex-migrator": "3.1.2",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.4",
     "markdown-it": "8.4.0",
     "markdown-it-footnote": "3.0.1",
     "markdown-it-lazy-headers": "0.1.3",
     "markdown-it-mark": "2.0.0",
     "mobiledoc-dom-renderer": "0.6.5",
-    "moment": "2.19.3",
+    "moment": "^2.19.3",
     "moment-timezone": "0.5.14",
     "multer": "1.3.0",
     "mysql": "2.15.0",
@@ -97,7 +97,7 @@
     "sqlite3": "3.1.13"
   },
   "devDependencies": {
-    "eslint": "4.12.0",
+    "eslint": "^4.12.0",
     "grunt": "1.0.1",
     "grunt-bg-shell": "2.3.3",
     "grunt-cli": "1.2.0",
@@ -109,7 +109,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-cssnano": "2.1.0",
     "grunt-docker": "0.0.11",
-    "grunt-eslint": "20.1.0",
+    "grunt-eslint": "^20.1.0",
     "grunt-express-server": "0.5.3",
     "grunt-mocha-cli": "3.0.0",
     "grunt-mocha-istanbul": "5.0.2",
