--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^3.28.1",
     "react-social-icons": "^4.1.0",
     "typeface-nunito": "0.0.72"
   },
