--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.3.0",
+    "astro-google-analytics": "^1.0.3",
     "astro-robots-txt": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
